syntax = "proto3";

package assignment;

service AssignmentService {
  rpc getTotalTaskWithStatusFromProjectAndTotalStaff(getTotalTaskWithStatusFromProjectAndTotalStaffRequest) returns (getTotalTaskWithStatusFromProjectAndTotalStaffResponse);
  rpc getAllUserProject(getAllUserProjectRequest) returns (getAllUserProjectResponse);
}
message getTotalTaskWithStatusFromProjectAndTotalStaffRequest{
  string project_id = 1;
}
message getTotalTaskWithStatusFromProjectAndTotalStaffResponse{
  int64 total_staff = 1;
  int64 total_task_is_done = 2;
  int64 total_task_is_not_done = 3;
}

message getAllUserProjectRequest{
  string user_id = 1;
}
message getAllUserProjectResponse {
  repeated string ids = 1;
}
